# rfp-ppt

./: .gitignore  Makefile  README.md  RFP_AI_PROJECT_GUIDE.md
.github/workflows/: ci.yml
backend/: .env.example  Dockerfile  pyproject.toml
backend/app/: main.py
backend/app/api/v1/: router.py  routes_generation.py  routes_projects.py
backend/app/core/: config.py  logging.py  observability.py  security.py
backend/app/db/: chroma.py  neo4j.py  postgres.py
backend/app/models/: api_schemas.py  domain.py
backend/app/services/: audit_service.py  claim_verifier.py  crawler_service.py  generation_service.py  graphrag_service.py  job_store.py  llm_router.py  manus_service.py  ppt_renderer.py  progress_service.py  quality_service.py  question_miner.py  queue_service.py  slide_planner.py  slide_writer.py  source_quality_service.py  tavily_service.py  vault_service.py
backend/app/tests/unit/: test_job_store.py  test_quality_service.py  test_security.py  test_slide_planner.py
backend/app/workers/: celery_app.py  tasks_generation.py
backend/app/workflows/: rfp_graph.py
docs/: prompt_library.md  runbook.md  sample_flow.md
frontend/: .env.example  Dockerfile  index.html  package-lock.json  package.json  tsconfig.tsbuildinfo
frontend/src/: main.tsx  styles.css  vite-env.d.ts
frontend/src/components/: DeckPreview.tsx  ExportCenter.tsx  GenerationConsole.tsx  NewProjectForm.tsx  QuestionBank.tsx  ScreenTabs.tsx
frontend/src/hooks/: useJobPolling.ts
frontend/src/lib/: api.ts  store.ts  toast.tsx
infra/: docker-compose.yml  prometheus.yml
(+1 files in other folders)
